--- a/client/capstone.html
+++ b/client/capstone.html
@@ -15,4 +15,6 @@
         <input type="text" name="city">
         <input type="submit" value="Go">
     </form>
+    
+    <button type="button" id="goCompare">Compare two cities</button>
 </template>
