--- a/client/templates.html
+++ b/client/templates.html
@@ -30,7 +30,14 @@
 
 <template name="cityStats">
     <div class="container">
-        <div class="col s6">City Name:</div>
-        <div class="col s6">{{getInfo}}</div>
+        {{getInfo}}
+        <div class="col s12" id="cityTitle">Results</div>
+        <div class="col s6" id ="cityInfo">City Name: {{cityName}}</div>
+        <div class="col s6" id ="cityInfo">Gas: $ {{gas}}</div>
+        <div class="col s6" id ="cityInfo">Bus: $ {{bus}}</div>
+        <div class="col s6" id ="cityInfo">Average Rent One Bedroom Apt: $ {{onebedapt}}</div>
+        <div class="col s6" id ="cityInfo">Average Salary: $ {{salary}}</div>
+        <div class="col s6" id ="cityInfo">Electricity: $ {{electricity}}</div>
+        <div class="col s6" id ="cityInfo">Water: $ {{water}}</div>
     </div>
 </template>
